--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "graphql-server-static",
+  "name": "graphql-server-static-webpack",
   "scripts": {
-    "generate:dbschema": "graphql bundle -p database -o ./src/generated/database.graphql -f",
-    "generate:schema": "graphql bundle -p app -o ./src/generated/schema.graphql -f",
-    "generate:binding": "graphql bindings ./src/generated/database.graphql -o ./src/generated/bindings.ts --ts -f",
-    "build": "npm run generate:dbschema && npm run generate:schema && npm run generate:binding",
-    "start": "ts-node src/index.ts"
+    "prestart": "webpack",
+    "start": "node build/bundle.js"
   },
   "dependencies": {
     "graphcool-binding": "^0.2.4",
-    "graphql-cli-binding": "^0.1.2",
-    "graphql-cli-bundle": "^0.1.2",
-    "graphql-import": "^0.1.8",
     "graphql-yoga": "^0.4.3"
   },
   "devDependencies": {
+    "graphql-import": "^0.1.8",
+    "graphql-static-binding": "^0.1.3",
+    "raw-loader": "^0.5.1",
+    "ts-loader": "^3.2.0",
     "ts-node": "4.0.2",
-    "typescript": "2.6.2"
+    "typescript": "2.6.2",
+    "webpack": "^3.10.0",
+    "webpack-node-externals": "^1.6.0"
   }
 }
