--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "moduleResolution": "node",
+    "target": "es6",
     "module": "commonjs",
     "sourceMap": true,
-    "rootDir": "src",
-    "outDir": "dist",
-    "lib": [
-      "esnext", "dom"
-    ]
+    "lib": ["esnext", "dom"],
   }
 }
